# linearhdr

./: .gitignore  CMakeLists.txt  README.rst  cmake_config.h.in  requirements.txt  setup.py
cmake/: FindNETPBM.cmake
mac_binary/: convertcolor  linearhdr  rawconvert
pylinearhdr/: __init__.py  calibrate.py  cli.py  make_list.py  pylinearhdr.py  shadowband.py
pylinearhdr/pylinearhdr_profiles/: D70-1-nlcorr.cfg  D70-1.cfg  D70-1ND3-nlcorr.cfg  D70-1ND3.cfg  D70-1SB.cfg  D70-2.cfg  D70-2SB.cfg  D70fish.cfg  F-11_vignetting.txt  F-16_vignetting.txt  F-18_vignetting.txt  F-22_vignetting.txt  F-8_vignetting.txt  R5.cfg  calibrate.cfg
src/: CMakeLists.txt  convertcolor.cpp  dcraw_process.cpp  demosaic.cpp  dht_demosaic.cpp  linearhdr.cpp  linearhdr.h  linearhdr_calibrate.py  linearhdr_exp.cpp  linearhdr_main.cpp  linearhdr_main_slim.cpp  linearhdr_make_list.py  linearhdr_slim.cpp  rawconvert.cpp
src/camera/: CMakeLists.txt  colorchange.cpp  linearhdr.cpp  linearhdr.h  linearhdr_main.cpp  pfshdrraw.cpp
src/fileformat/: hdrtiffio.cpp  hdrtiffio.h  rgbeio.cpp  rgbeio.h
src/pfs/: CMakeLists.txt
